add physiotherapy and about me sections

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,8 +4,13 @@
     <h2 class="hero-text">{{ .Params.hero_text }}</h2>
 </section>
 
-{{ partial "clients-section.html" . }}
-
 {{ partial "hotel-section.html" . }}
+
+{{ partial "physiotherapy-section.html" . }}
+
+{{ partial "about-section.html" . }}
+
+
+{{ partial "clients-section.html" . }}
 
 {{ end }}
