--- a/layouts/index.html
+++ b/layouts/index.html
@@ -10,7 +10,11 @@
 
 {{ partial "about-section.html" . }}
 
-
 {{ partial "clients-section.html" . }}
+
+{{ partial "pricing-section.html" . }}
+
+{{ partial "terms-section.html" . }}
+
 
 {{ end }}
