--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<div class="content">
+<div class="page-content">
     <h1>{{ .Title }}</h1>
     <article>
         {{ .Content }}
